@@ -9453,6 +9453,89 @@ literal|"_0.cfs"
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|assertTrue
+argument_list|(
+name|files
+operator|.
+name|contains
+argument_list|(
+literal|"_0.cfe"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|files
+operator|.
+name|contains
+argument_list|(
+literal|"_0.si"
+argument_list|)
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|iter
+operator|==
+literal|1
+condition|)
+block|{
+comment|// we run a full commit so there should be a segments file etc.
+name|assertTrue
+argument_list|(
+name|files
+operator|.
+name|contains
+argument_list|(
+literal|"segments_1"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|files
+operator|.
+name|contains
+argument_list|(
+literal|"segments.gen"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|files
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+name|files
+operator|.
+name|size
+argument_list|()
+argument_list|,
+literal|5
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+comment|// this is an NRT reopen - no segments files yet
+name|assertEquals
+argument_list|(
+name|files
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+name|files
+operator|.
+name|size
+argument_list|()
+argument_list|,
+literal|3
+argument_list|)
+expr_stmt|;
+block|}
 name|w
 operator|.
 name|addDocument
